--- a/donate.html
+++ b/donate.html
@@ -33,10 +33,6 @@
     font-size: small;
 }
 
-#ak-continue-button {
-    width: 100%;
-}
-
 </style>
 
 <section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
@@ -510,18 +506,141 @@
           <div class="payments-container">
               <div class="payments-titles">
                 <div class="payments-title payments-title-active card-title">
-                    <span>Card</span>
                      <svg width="75" height="40" class="payments-title-active">
-                         <image xlink:href=https://dkaroyc5da26m.cloudfront.net/images/cards.svg width="75" height="40"/>
+                         <image href=https://dkaroyc5da26m.cloudfront.net/images/cards.svg width="75" height="40"/>
                  </svg>
                 </div>
                 <div class="payments-title paypal-title">
                  <svg width="75" height="40">
-                     <image xlink:href=https://dkaroyc5da26m.cloudfront.net/images/paypal-logo.svg width="75" height="40"/>
+                     <image href=https://dkaroyc5da26m.cloudfront.net/images/paypal-logo.svg width="75" height="40"/>
                 </svg>
                 </div>
               </div>
                 <div id="payments-details-content">
+                  <div class="credit-card-fields">
+                      <div class="input-text ak-input-type-user">
+                          <label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
+                          <input id="id_name" class="ak-input-type-user" type="text" name="name">
+                        </div>
+                        <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user">
+                          <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>
+                          <input type="hidden" name="required" value="card_num" id="ak-card_num-required">
+                          <div id="ak-card_num-hosted" class="hosted-field"></div>
+                          <input id="ak-card_num" type="text" name="card_num">
+                        </div>
+              
+                        <div class="ak-err-below">
+                          <div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c5 ct5 margin-top-none">
+                            <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">
+                            <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>
+                            <div id="ak-exp_date-hosted" class="hosted-field"></div>
+                            <select id="ak-exp_date_month" class="input-cc-expiration-month c4 ct4 cm4 no-margin" type="text" name="exp_date_month">
+                              <option value="">MM</option>
+                              <option value="01">01</option>
+                              <option value="02">02</option>
+                              <option value="03">03</option>
+                              <option value="04">04</option>
+                              <option value="05">05</option>
+                              <option value="06">06</option>
+                              <option value="07">07</option>
+                              <option value="08">08</option>
+                              <option value="09">09</option>
+                              <option value="10">10</option>
+                              <option value="11">11</option>
+                              <option value="12">12</option>
+                            </select>
+                            <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">
+                            <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin" name="exp_date_year">
+                              <option value="">YYYY</option>
+              {% for year in exp_years %}
+                              <option value="{{ year.two }}">{{ year.four }}</option>
+              {% endfor %}
+                            </select>
+                            <div class="clear"></div>
+                          </div>
+                          <div id="ak-fieldbox-card_code" class="input-text input-cvv ak-input-type-user c5 ct5 margin-top-none">
+                            <input type="hidden" name="required" value="card_code" id="ak-card_code-required">
+                            <label for="ak-card_code" title="The 3–4 digit security code on the back of your card.">{% filter ak_text:"field_card_code" %}CVV{% endfilter %}</label>
+                            <div id="ak-card_code-hosted" class="hosted-field"></div>
+                            <input id="ak-card_code" type="text" name="card_code" size="4">
+                          </div>
+                          <div class="clear"></div>
+                        </div>
+                        {% if templateset.custom_fields.pre_submit_text %}
+                        <div class="pre-submit-text">
+                          {% autoescape off %}
+                            {{ templateset.custom_fields.pre_submit_text }}
+                          {% endautoescape %}
+                        </div>
+                      {% endif %}
+              
+                      </div><!--ak-styled-fields-->
+                      <div class="paypal-fields">
+                          <div class="input-text ak-input-type-user">
+                        <label class="required" for="id_email">Name</label>
+                        <input id="id_email" class="" type="text" name="email">
+                      </div>
+                          <div class="input-text ak-input-type-user">
+                        <label class="required" for="id_email">Email Address</label>
+                        <input id="id_email" class="" type="text" name="email">
+                      </div>
+                  </div>
+                  </div>
+                            <!-- <div class="input-text ak-input-type-user">
+					<div class="input-text ak-input-type-user input-field-group">
+						<label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
+						<input id="id_name" class="ak-input-type-user" type="text" name="name">
+					</div>
+					<div class="input-text ak-input-type-user input-field-group">
+						<label class="required" for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
+						<input id="id_email" class="" type="text" name="email">
+					</div>
+					<div class="cc-fields">
+	          <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user">
+					    <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>
+					    <input type="hidden" name="required" value="card_num" id="ak-card_num-required">
+					    <div id="ak-card_num-hosted" class="hosted-field"></div>
+					    <input id="ak-card_num" type="text" name="card_num">
+						</div>
+						<div class="ak-err-below">
+							<div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c5 ct5 margin-top-none">
+				        <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">
+				        <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>
+				        <div id="ak-exp_date-hosted" class="hosted-field"></div>
+				        <select id="ak-exp_date_month" class="input-cc-expiration-month c4 ct4 cm4 no-margin" type="text" name="exp_date_month">
+			            <option value="">MM</option>
+			            <option value="01">01</option>
+			            <option value="02">02</option>
+			            <option value="03">03</option>
+			            <option value="04">04</option>
+			            <option value="05">05</option>
+			            <option value="06">06</option>
+			            <option value="07">07</option>
+			            <option value="08">08</option>
+			            <option value="09">09</option>
+			            <option value="10">10</option>
+			            <option value="11">11</option>
+			            <option value="12">12</option>
+								</select>
+				        <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">
+				        <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin" name="exp_date_year">
+			            <option value="">YYYY</option>
+	{% for year in exp_years %}
+			            <option value="{{ year.two }}">{{ year.four }}</option>
+	{% endfor %}
+				        </select>
+								<div class="clear"></div>
+							</div>
+						</div>
+						<div class="clear"></div>
+					</div>
+					{% if templateset.custom_fields.pre_submit_text %}
+					<div class="pre-submit-text">
+						{% autoescape off %}
+							{{ templateset.custom_fields.pre_submit_text }}
+						{% endautoescape %}
+					</div>
+				{% endif %} -->
                 </div>
            </div>
           <!-- <div class="input-text ak-input-type-user">
@@ -1571,7 +1690,7 @@
     const paymentsDetailsContent = $("#payments-details-content");
     const continueButton = $("#ak-continue-button");
 
-    paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
+    // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
     const removeActivePaymentsClass = () => {
       $.each(paymentsTitles, (index, title)=>{
           const titleCtn = $(title);
@@ -1584,20 +1703,19 @@
     $.each(paymentsTitles, (index, title)=>{
       const titleCtn = $(title);
       titleCtn.click(e=>{
-        console.log("Clicked here?")
           const clicked = $(e.target);
           const parentHasClass = clicked.parents(`.${CONSTANTS.ACTIVE_PAYMENTS_CLASS}`).length > 0;
           if(parentHasClass) return;
             else {
             const closestDiv = clicked.closest('.payments-title');
-            console.log(closestDiv, "hapaz")
+
 
             if(closestDiv.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
                 paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-                continueButton.text('Continue to PayPal')
+                // continueButton.text('Continue to PayPal')
             } else {
                 paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-                continueButton.text('Continue')
+                // continueButton.text('Continue')
             }
             removeActivePaymentsClass();
             closestDiv.addClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
@@ -1611,10 +1729,10 @@
           // Update Content
           if(clicked.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
               paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-              continueButton.text('Continue to PayPal')
+              // continueButton.text('Continue to PayPal')
           } else {
               paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-              continueButton.text('Continue')
+              // continueButton.text('Continue')
           }
       });
     })
