move from Js solution to CSS solution for the tabs

--- a/donate.html
+++ b/donate.html
@@ -517,7 +517,7 @@
                 </div>
               </div>
                 <div id="payments-details-content">
-                  <div class="credit-card-fields">
+                    <div id="credit-card-fields">
                       <div class="input-text ak-input-type-user">
                           <label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
                           <input id="id_name" class="ak-input-type-user" type="text" name="name">
@@ -558,13 +558,6 @@
                             </select>
                             <div class="clear"></div>
                           </div>
-                          <div id="ak-fieldbox-card_code" class="input-text input-cvv ak-input-type-user c5 ct5 margin-top-none">
-                            <input type="hidden" name="required" value="card_code" id="ak-card_code-required">
-                            <label for="ak-card_code" title="The 3–4 digit security code on the back of your card.">{% filter ak_text:"field_card_code" %}CVV{% endfilter %}</label>
-                            <div id="ak-card_code-hosted" class="hosted-field"></div>
-                            <input id="ak-card_code" type="text" name="card_code" size="4">
-                          </div>
-                          <div class="clear"></div>
                         </div>
                         {% if templateset.custom_fields.pre_submit_text %}
                         <div class="pre-submit-text">
@@ -575,7 +568,7 @@
                       {% endif %}
               
                       </div><!--ak-styled-fields-->
-                      <div class="paypal-fields">
+                      <div id="paypal-fields">
                           <div class="input-text ak-input-type-user">
                         <label class="required" for="id_email">Name</label>
                         <input id="id_email" class="" type="text" name="email">
@@ -1612,83 +1605,17 @@
     const CONSTANTS = {
             ACTIVE_PAYMENTS_CLASS: "payments-title-active",
             PAYPAL_TARGET_CLASS: "paypal-title"
-        };
-    const PAYMENTS_DETAILS_CONTENTS = {
-          CREDIT_CARD: `
-          <div>
-					<div class="input-text ak-input-type-user input-field-group">
-						<label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
-						<input id="id_name" class="ak-input-type-user" type="text" name="name">
-					</div>
-					<div class="input-text ak-input-type-user input-field-group">
-						<label class="required" for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
-						<input id="id_email" class="" type="text" name="email">
-					</div>
-					<div class="cc-fields">
-	          <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user">
-					    <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>
-					    <input type="hidden" name="required" value="card_num" id="ak-card_num-required">
-					    <div id="ak-card_num-hosted" class="hosted-field"></div>
-					    <input id="ak-card_num" type="text" name="card_num">
-						</div>
-						<div class="ak-err-below">
-							<div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c10 margin-top-none">
-				        <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">
-				        <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>
-				        <div id="ak-exp_date-hosted" class="hosted-field"></div>
-				        <select id="ak-exp_date_month" class="input-cc-expiration-month c4 ct4 cm4 no-margin" type="text" name="exp_date_month">
-			            <option value="">MM</option>
-			            <option value="01">01</option>
-			            <option value="02">02</option>
-			            <option value="03">03</option>
-			            <option value="04">04</option>
-			            <option value="05">05</option>
-			            <option value="06">06</option>
-			            <option value="07">07</option>
-			            <option value="08">08</option>
-			            <option value="09">09</option>
-			            <option value="10">10</option>
-			            <option value="11">11</option>
-			            <option value="12">12</option>
-								</select>
-				        <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">
-				        <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin" name="exp_date_year">
-			            <option value="">YYYY</option>
-	{% for year in exp_years %}
-			            <option value="{{ year.two }}">{{ year.four }}</option>
-	{% endfor %}
-				        </select>
-								<div class="clear"></div>
-							</div>
-						</div>
-						<div class="clear"></div>
-					</div>
-					{% if templateset.custom_fields.pre_submit_text %}
-					<div class="pre-submit-text">
-						{% autoescape off %}
-							{{ templateset.custom_fields.pre_submit_text }}
-						{% endautoescape %}
-					</div>
-        {% endif %}
-        </div>
-              `,
-              PAYPAL: `<div class="paypal-fields">
-                  <div class="input-text ak-input-type-user">
-                <label class="required" for="id_email">Name</label>
-                <input id="id_email" class="" type="text" name="email">
-              </div>
-                  <div class="input-text ak-input-type-user">
-                <label class="required" for="id_email">Email Address</label>
-                <input id="id_email" class="" type="text" name="email">
-              </div>
-
-                  </div>`
-      }
+    };
 
     const paymentsCtn = $(".payments-container");
     const paymentsTitles = $(".payments-title");
     const paymentsDetailsContent = $("#payments-details-content");
     const continueButton = $("#ak-continue-button");
+    const paypalFields = $('#paypal-fields');
+    const creditCardFields = $('#credit-card-fields');
+
+    // Hide Paypal on Load
+    paypalFields.css({'display': 'none'});
 
     // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
     const removeActivePaymentsClass = () => {
@@ -1711,11 +1638,11 @@
 
 
             if(closestDiv.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
-                paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-                // continueButton.text('Continue to PayPal')
+                paypalFields.css({'display': 'block'});
+                creditCardFields.css({'display': 'none'});
             } else {
-                paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-                // continueButton.text('Continue')
+              paypalFields.css({'display': 'none'});
+              creditCardFields.css({'display': 'block'});
             }
             removeActivePaymentsClass();
             closestDiv.addClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
@@ -1723,16 +1650,16 @@
           }
 
           if(clicked.hasClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS)) return;
-          // removeActivePaymentsClass()
+   
           clicked.addClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
 
           // Update Content
           if(clicked.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
-              paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-              // continueButton.text('Continue to PayPal')
+            paypalFields.css({'display': 'block'});
+            creditCardFields.css({'display': 'none'});
           } else {
-              paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-              // continueButton.text('Continue')
+            paypalFields.css({'display': 'none'});
+            creditCardFields.css({'display': 'block'});
           }
       });
     })
