--- a/donate.html
+++ b/donate.html
@@ -1579,8 +1579,6 @@
       });
     };
 
-
-
     $.each(paymentsTitles, (index, title)=>{
       const titleCtn = $(title);
       titleCtn.click(e=>{
@@ -1611,10 +1609,10 @@
           // Update Content
           if(clicked.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
               paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-              continueButton.text('Continue to PayPal')
+              // continueButton.text('Continue to PayPal')
           } else {
               paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-              continueButton.text('Continue')
+              // continueButton.text('Continue')
           }
       });
     })
