Add in more logs and remove card_code referemce

--- a/donate.html
+++ b/donate.html
@@ -1075,7 +1075,7 @@
                            "privacy"
                            {% if templateset.custom_fields.ask_occupation_and_employer %},"action_employer", "action_occupation"{% endif %}];
       } else {
-        validate_fields = ["email","card_num", "card_code", "first_name", "last_name", "name",
+        validate_fields = ["email","card_num", "first_name", "last_name", "name",
                            "exp_date_year", "exp_date_month", "exp_date"];
       }
 
