Remove references of credit card code

--- a/donate.html
+++ b/donate.html
@@ -1075,7 +1075,7 @@
                            "privacy"
                            {% if templateset.custom_fields.ask_occupation_and_employer %},"action_employer", "action_occupation"{% endif %}];
       } else {
-        validate_fields = ["email","card_num", "card_code", "first_name", "last_name", "name",
+        validate_fields = ["email","card_num", "first_name", "last_name", "name",
                            "exp_date_year", "exp_date_month", "exp_date"];
       }
 
@@ -1128,15 +1128,16 @@
         step_has_errors = true;
       }
 
-      if (!valid_credit_card_code($('#ak-card_code').val())) {
-        if (!actionkit.errors){
-          actionkit.errors = {};
-				}
-        actionkit.errors['card_code:invalid'] = actionkit.forms.errorMessage('card_code:invalid');
-        actionkit.forms.onValidationErrors(actionkit.errors);
-        step_has_errors = true;
-      }
+      // if (!valid_credit_card_code($('#ak-card_code').val())) {
+      //   if (!actionkit.errors){
+      //     actionkit.errors = {};
+			// 	}
+      //   actionkit.errors['card_code:invalid'] = actionkit.forms.errorMessage('card_code:invalid');
+      //   actionkit.forms.onValidationErrors(actionkit.errors);
+      //   step_has_errors = true;
+      // }
 
+      console.log(step_has_errors, "Step Has Errors?")
       return step_has_errors;
     }
 
@@ -1452,11 +1453,11 @@
 
         /* clear out CC info if entered */
         $('#ak-card_num').val('');
-        $('#ak-card_code').val('');
+        // $('#ak-card_code').val('');
 
         /* disable CC requirements */
         $('#ak-card_num-required').remove();
-        $('#ak-card_code-required').remove();
+        // $('#ak-card_code-required').remove();
         $('#ak-exp_date_month-required').remove();
         $('#ak-exp_date_year-required').remove();
 
@@ -1692,9 +1693,6 @@
                     number: {	
                         selector: '#ak-card_num-hosted'	
                     },	
-                    cvv: {	
-                        selector: '#ak-card_code-hosted'	
-                    },	
                     expirationDate: {	
                         selector: '#ak-exp_date-hosted',	
                         placeholder: 'MM / YYYY'	
@@ -1720,9 +1718,9 @@
                 },	
                 submit: form.querySelector(".ak-submit-button")	
             },	
-            toRemove = ["#ak-card_num", "#ak-card_code", "#ak-exp_date_month",	
+            toRemove = ["#ak-card_num", "#ak-exp_date_month",	
                         "#ak-exp_date_year", "#ak-card_num-required",	
-                        "#ak-card_code-required", "#ak-exp_date_month-required",	
+                         "#ak-exp_date_month-required",	
                         "#ak-exp_date_year-required"];	
         toRemove.forEach(function(el) {	
             $(el).remove();	
@@ -1742,7 +1740,6 @@
                     err.details.invalidFieldKeys.forEach(function(key) {	
                         var map = {	
                             'number': 'card_num',	
-                            'cvv': 'card_code',	
                             'expirationDate': 'card_exp'	
                         };	
                         actionkit.errors[map[key] + ':invalid'] = "This field is invalid.";;	
