--- a/donate.html
+++ b/donate.html
@@ -522,63 +522,9 @@
                 </div>
               </div>
                 <div id="payments-details-content">
+
                 </div>
            </div>
-          <!-- <div class="input-text ak-input-type-user">
-					<div class="input-text ak-input-type-user input-field-group">
-						<label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
-						<input id="id_name" class="ak-input-type-user" type="text" name="name">
-					</div>
-					<div class="input-text ak-input-type-user input-field-group">
-						<label class="required" for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
-						<input id="id_email" class="" type="text" name="email">
-					</div>
-					<div class="cc-fields">
-	          <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user">
-					    <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>
-					    <input type="hidden" name="required" value="card_num" id="ak-card_num-required">
-					    <div id="ak-card_num-hosted" class="hosted-field"></div>
-					    <input id="ak-card_num" type="text" name="card_num">
-						</div>
-						<div class="ak-err-below">
-							<div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c5 ct5 margin-top-none">
-				        <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">
-				        <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>
-				        <div id="ak-exp_date-hosted" class="hosted-field"></div>
-				        <select id="ak-exp_date_month" class="input-cc-expiration-month c4 ct4 cm4 no-margin" type="text" name="exp_date_month">
-			            <option value="">MM</option>
-			            <option value="01">01</option>
-			            <option value="02">02</option>
-			            <option value="03">03</option>
-			            <option value="04">04</option>
-			            <option value="05">05</option>
-			            <option value="06">06</option>
-			            <option value="07">07</option>
-			            <option value="08">08</option>
-			            <option value="09">09</option>
-			            <option value="10">10</option>
-			            <option value="11">11</option>
-			            <option value="12">12</option>
-								</select>
-				        <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">
-				        <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin" name="exp_date_year">
-			            <option value="">YYYY</option>
-	{% for year in exp_years %}
-			            <option value="{{ year.two }}">{{ year.four }}</option>
-	{% endfor %}
-				        </select>
-								<div class="clear"></div>
-							</div>
-						</div>
-						<div class="clear"></div>
-					</div>
-					{% if templateset.custom_fields.pre_submit_text %}
-					<div class="pre-submit-text">
-						{% autoescape off %}
-							{{ templateset.custom_fields.pre_submit_text }}
-						{% endautoescape %}
-					</div>
-				{% endif %} -->
 
         </div><!--ak-styled-fields-->
 
@@ -1104,11 +1050,10 @@
     }
 
     function step_3_validation() {
-      var step_has_errors = false;
+      let step_has_errors = false;
 
       if (!valid_email( $('#id_email').val() ) ) {
-        if (!actionkit.errors)
-            actionkit.errors = {};
+        if (!actionkit.errors) actionkit.errors = {};
         actionkit.errors['email:invalid'] = actionkit.forms.errorMessage('email:invalid');
         actionkit.forms.onValidationErrors(actionkit.errors);
         step_has_errors = true;
@@ -1494,10 +1439,10 @@
     const CONSTANTS = {
             ACTIVE_PAYMENTS_CLASS: "payments-title-active",
             PAYPAL_TARGET_CLASS: "paypal-title"
-        };
+    };
+
     const PAYMENTS_DETAILS_CONTENTS = {
           CREDIT_CARD: `
-          <div>
 					<div class="input-text ak-input-type-user input-field-group">
 						<label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
 						<input id="id_name" class="ak-input-type-user" type="text" name="name">
@@ -1552,7 +1497,6 @@
 						{% endautoescape %}
 					</div>
         {% endif %}
-        </div>
               `,
               PAYPAL: `<div class="paypal-fields">
                   <div class="input-text ak-input-type-user">
@@ -1572,7 +1516,7 @@
     const paymentsDetailsContent = $("#payments-details-content");
     const continueButton = $("#ak-continue-button");
 
-    paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
+    paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD); // Insert HTML using JS.
     const removeActivePaymentsClass = () => {
       $.each(paymentsTitles, (index, title)=>{
           const titleCtn = $(title);
