--- a/donate.html
+++ b/donate.html
@@ -977,7 +977,7 @@
             .closest('label')
             .find('span.ak-amount-label')
             // .html(amount+'<span class="ak-donation-monthly">/mo</span>')
-            .html(amount)
+            .html('<span class="ak-donation-total-amount"></span>')
             .css({"text-decoration": "underline"});
         }
     }
