--- a/donate.html
+++ b/donate.html
@@ -971,12 +971,12 @@
           var custom_amount = document.querySelector('#ak-other-amount-field').value;
           if (!custom_amount) amount += button_amount;
           else amount += custom_amount;
-          if ($('#id_donation_type_recurring').is(':checked')) {
-            amount += '/mo';
-          }
-          else {
-            amount.replace('/mo','');
-          }
+          // if ($('#id_donation_type_recurring').is(':checked')) {
+          //   amount += '/mo';
+          // }
+          // else {
+          //   amount.replace('/mo','');
+          // }
           console.log('button amount',button_amount, 'custom amount', custom_amount, 'amount', amount);
           $('input[name="ak-donate-step"]:checked')
             .closest('label')
