--- a/donate.html
+++ b/donate.html
@@ -512,12 +512,12 @@
                 <div class="payments-title payments-title-active card-title">
                     <span>Card</span>
                      <svg width="75" height="40" class="payments-title-active">
-                         <image xlink:href=https://dkaroyc5da26m.cloudfront.net/images/cards.svg width="75" height="40"/>
+                         <image href=https://dkaroyc5da26m.cloudfront.net/images/cards.svg width="75" height="40"/>
                  </svg>
                 </div>
                 <div class="payments-title paypal-title">
                  <svg width="75" height="40">
-                     <image xlink:href=https://dkaroyc5da26m.cloudfront.net/images/paypal-logo.svg width="75" height="40"/>
+                     <image href=https://dkaroyc5da26m.cloudfront.net/images/paypal-logo.svg width="75" height="40"/>
                 </svg>
                 </div>
               </div>
@@ -526,7 +526,64 @@
                 </div>
            </div>
 
-        </div><!--ak-styled-fields-->
+          <!--Name-->
+            <div class="input-text ak-input-type-user cc-fields">	
+              <label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>	
+              <input id="id_name" class="ak-input-type-user" type="text" name="name">	
+            </div>	
+            <!--Credit Card-->
+            <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user cc-fields">	
+              <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>	
+              <input type="hidden" name="required" value="card_num" id="ak-card_num-required">	
+              <div id="ak-card_num-hosted" class="hosted-field"></div>	
+              <input id="ak-card_num" type="text" name="card_num">	
+            </div>
+            <!--Error-->	
+            <div class="ak-err-below cc-fields">	
+              <div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c5 ct5 margin-top-none">	
+                <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">	
+                <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>	
+                <div id="ak-exp_date-hosted" class="hosted-field"></div>	
+                <select id="ak-exp_date_month" class="input-cc-expiration-month c4 ct4 cm4 no-margin" type="text" name="exp_date_month">	
+                  <option value="">MM</option>	
+                  <option value="01">01</option>	
+                  <option value="02">02</option>	
+                  <option value="03">03</option>	
+                  <option value="04">04</option>	
+                  <option value="05">05</option>	
+                  <option value="06">06</option>	
+                  <option value="07">07</option>	
+                  <option value="08">08</option>	
+                  <option value="09">09</option>	
+                  <option value="10">10</option>	
+                  <option value="11">11</option>	
+                  <option value="12">12</option>	
+                </select>	
+                <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">	
+                <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin" name="exp_date_year">	
+                  <option value="">YYYY</option>	
+  {% for year in exp_years %}	
+                  <option value="{{ year.two }}">{{ year.four }}</option>	
+  {% endfor %}	
+                </select>	
+                <div class="clear"></div>	
+              </div>	
+              <div id="ak-fieldbox-card_code" class="input-text input-cvv ak-input-type-user c5 ct5 margin-top-none">	
+                <input type="hidden" name="required" value="card_code" id="ak-card_code-required">	
+                <label for="ak-card_code" title="The 3–4 digit security code on the back of your card.">{% filter ak_text:"field_card_code" %}CVV{% endfilter %}</label>	
+                <div id="ak-card_code-hosted" class="hosted-field"></div>	
+                <input id="ak-card_code" type="text" name="card_code" size="4">	
+              </div>	
+              <div class="clear"></div>	
+            </div>	
+            {% if templateset.custom_fields.pre_submit_text %}	
+            <div class="pre-submit-text">	
+              {% autoescape off %}	
+                {{ templateset.custom_fields.pre_submit_text }}	
+              {% endautoescape %}	
+            </div>	
+          {% endif %}	
+          </div><!--ak-styled-fields-->
 
 {% autoescape off %}
 	{% if page.custom_fields.form_additional_fields %}
@@ -553,10 +610,27 @@
 				{% endif %}
 
 				{% if show_paypal %}
-	        <!-- <div class="ak-payment-options text-center ak-donate-area-step-3">
+	        <div class="ak-payment-options text-center ak-donate-area-step-3">
+              <div class="input-text ak-input-type-user">
+                  <label class="required" for="id_email">Name</label>
+                  <input id="id_email" class="" type="text" name="email">
+                </div>
+                    <div class="input-text ak-input-type-user">
+                  <label class="required" for="id_email">Email Address</label>
+                  <input id="id_email" class="" type="text" name="email">
+                </div>
 	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
-						<p class="margin-bottom-small text-small"><em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em> <button type="submit" id="ak-paypal-button" class="button bg-ltgray button-small"><img src="/media/modern/paypal-logo-1.svg" style="position:relative;top:3px;"></button></p>
-	        </div> -->
+						<p class="margin-bottom-small text-small"><em>{% filter ak_text:"donate_or_check_out_with" %}
+              or check out with{% endfilter %} </em> 
+              <button type="submit" 
+              id="ak-paypal-button" 
+              class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">
+              <!-- <img src="/media/modern/paypal-logo-1.svg" 
+              style="position:relative;top:3px;"> -->
+              Continue with Paypal
+            </button>
+          </p>
+	        </div>
 				{% endif %}
 				</div>
 			</div>
@@ -621,7 +695,6 @@
 
 <script language="javascript">
 //<!--
-  console.log(actionkit, "Action kit is here?>>")
     function clear_radio_buttons() {
         $('input.ak-amount-radio-button').prop('checked', false);
     }
@@ -1549,7 +1622,7 @@
     const paymentsDetailsContent = $("#payments-details-content");
     const continueButton = $("#ak-continue-button");
 
-    paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD); // Insert HTML using JS.
+    // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD); // Insert HTML using JS. // Commented Out for Attempt #1
     const removeActivePaymentsClass = () => {
       $.each(paymentsTitles, (index, title)=>{
           const titleCtn = $(title);
