--- a/donate.html
+++ b/donate.html
@@ -539,8 +539,8 @@
               <input id="ak-card_num" type="text" name="card_num">	
             </div>
             <!--Error-->	
-            <div class="ak-err-below cc-fields">	
-              <div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c5 ct5 margin-top-none">	
+            <div class="ak-err-below">	
+              <div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c5 ct5 margin-top-none cc-fields">	
                 <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">	
                 <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>	
                 <div id="ak-exp_date-hosted" class="hosted-field"></div>	
@@ -560,7 +560,7 @@
                   <option value="12">12</option>	
                 </select>	
                 <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">	
-                <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin" name="exp_date_year">	
+                <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin cc-fields" name="exp_date_year">	
                   <option value="">YYYY</option>	
   {% for year in exp_years %}	
                   <option value="{{ year.two }}">{{ year.four }}</option>	
@@ -576,6 +576,27 @@
               {% endautoescape %}	
             </div>	
           {% endif %}	
+          {% if show_paypal %}
+	        <div class="ak-payment-options text-center ak-donate-area-step-3 paypal-fields">
+              <div class="input-text ak-input-type-user">
+                  <label class="required" for="id_email">Name</label>
+                  <input id="id_email" class="" type="text" name="email">
+                </div>
+                    <div class="input-text ak-input-type-user">
+                  <label class="required" for="id_email">Email Address</label>
+                  <input id="id_email" class="" type="text" name="email">
+                </div>
+	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
+              <!-- <em>{% filter ak_text:"donate_or_check_out_with" %} or check out with{% endfilter %} </em>  -->
+              <button type="submit" 
+              id="ak-paypal-button" 
+              class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">
+              <!-- <img src="/media/modern/paypal-logo-1.svg" 
+              style="position:relative;top:3px;"> -->
+              Continue with Paypal
+            </button>
+	        </div>
+				{% endif %}
           </div><!--ak-styled-fields-->
 
 {% autoescape off %}
@@ -602,29 +623,6 @@
         	<button type="submit" class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">Donate <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span><span class="ak-donation-monthly" style="display: none;">/mo</span></button>
 				{% endif %}
 
-				{% if show_paypal %}
-	        <div class="ak-payment-options text-center ak-donate-area-step-3">
-              <div class="input-text ak-input-type-user">
-                  <label class="required" for="id_email">Name</label>
-                  <input id="id_email" class="" type="text" name="email">
-                </div>
-                    <div class="input-text ak-input-type-user">
-                  <label class="required" for="id_email">Email Address</label>
-                  <input id="id_email" class="" type="text" name="email">
-                </div>
-	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
-						<p class="margin-bottom-small text-small"><em>{% filter ak_text:"donate_or_check_out_with" %}
-              or check out with{% endfilter %} </em> 
-              <button type="submit" 
-              id="ak-paypal-button" 
-              class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">
-              <!-- <img src="/media/modern/paypal-logo-1.svg" 
-              style="position:relative;top:3px;"> -->
-              Continue with Paypal
-            </button>
-          </p>
-	        </div>
-				{% endif %}
 				</div>
 			</div>
 		</div>
